Remove default route and add webpack support
