# api/swagger.yml
@@ -11,22 +11,6 @@ basePath: "/api/v1"
 schemes:
 - "http"
 paths:
-  /:
-    get:
-      summary: "Welcome"
-      description: "Welcome"
-      operationId: "welcome"
-      produces:
-      - "application/json"
-      responses:
-        200:
-          description: "successful operation"
-          schema:
-            $ref: "#/definitions/Message"
-        500:
-          description: "server error"
-          schema:
-            $ref: "#/definitions/Message"
   /clients:
     post:
       summary: "Create new client"
